force-app/main/default/objects/Sub_Debt_Transaction__c/Sub_Debt_Transaction__c.object-meta.xml
<CustomObject>
    <label>Sub Debt Transaction</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sub Debt Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>