force-app/main/default/objects/Sub_Debt_Transaction__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sub Debt Transactions</relationshipLabel>
    <relationshipName>Sub_Debt_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>