force-app/main/default/objects/Sub_Debt_Transaction__c/fields/Sub_Debt_Transaction_Name__c.field-meta.xml
<CustomField>
    <fullName>Sub_Debt_Transaction_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Sub Debt Transaction</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>