force-app/main/default/objects/Sub_Debt_Transaction__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Term</label>
    <length>50</length>
    <type>Text</type>
</CustomField>